# noex-client-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: playground.py
src/noex_client/: __init__.py  client.py  config.py  errors.py
src/noex_client/api/: audit.py  auth.py  bucket.py  identity.py  logic.py  procedures.py  rules.py  store.py
src/noex_client/logic/: __init__.py  expr.py
src/noex_client/protocol/: __init__.py  push_router.py  request_manager.py
src/noex_client/subscription/: __init__.py  subscription_manager.py
src/noex_client/transport/: __init__.py  reconnect.py  transport.py
tests/: conftest.py
tests/fixtures/: package.json  start-server.mjs
tests/integration/: test_admin_queries.py  test_admin_store.py  test_audit.py  test_auth.py  test_connection.py  test_edge_cases.py  test_identity.py  test_logic.py  test_procedures.py  test_reconnect.py  test_rules.py  test_store_crud.py  test_store_subscriptions.py  test_store_transactions.py
tests/unit/: test_expr.py  test_non_retryable_close.py  test_push_router.py  test_reconnect.py  test_request_manager.py  test_subscription_manager.py
