[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noex-client"
version = "0.1.0"
description = "Python client SDK for noex-server"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/noex_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
